--- a/Call-to-actions-pages/index.html
+++ b/Call-to-actions-pages/index.html
@@ -5,14 +5,17 @@
   <title>Call to actions</title>
   <link href="global.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
-
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap');
+  </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-  Hello World
+    Call to actions
+    <h1>Salut</h1>
 </body>
 
 </html>
