--- a/Call-to-actions-pages/index.html
+++ b/Call-to-actions-pages/index.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
-    Call to actions
-    <h1>Salut</h1>
+    <button class="btn-primary btn-large btn-disable">Try me</button>
+    <button class="btn-secondary btn-middle">Try me</button>
+    <button class="btn-secondary btn-small">Try me</button>
 </body>
 
 </html>
