--- a/Exemple/CTA-30/index.html
+++ b/Exemple/CTA-30/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>CTA-26</title>
+  <title>CTA-30</title>
   <link href="../global.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
   <style>
@@ -16,11 +16,19 @@
 
 <body>
     <div class="layout">
-        <div class="cta-image"></div>
-        <div class="content">
-            <h1>Try using our templates!</h1>
-            <p>Let’s embody your beautiful ideas together, simplify the way you visualize your next big things.</p>
-            <button class="btn-primary cta-btn">Try Now</button>
+        <div class="content-wrapper">
+            <div class="content">
+                <h1>Try using our templates!</h1>
+                <p>Let’s embody your beautiful ideas together, simplify the way you visualize your next big things.</p>
+                <div class="items">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                </div>
+            </div>
+        </div>
+        <div class="cta-image">
+    
         </div>
     </div>
 </body>
