--- a/Exemple/CTA-44/index.html
+++ b/Exemple/CTA-44/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>CTA-30</title>
+  <title>CTA-44</title>
   <link href="../global.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
   <style>
@@ -16,19 +16,13 @@
 
 <body>
     <div class="layout">
-        <div class="content-wrapper">
-            <div class="content">
-                <h1>Try using our templates!</h1>
-                <p>Let’s embody your beautiful ideas together, simplify the way you visualize your next big things.</p>
-                <div class="items">
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-tiktok"></i>
-                </div>
+        <div class="content">
+            <h1>Try using our templates!</h1>
+            <div class="input-button cta-form">
+                <input placeholder="Enter your email address" />
+                <button class="btn-primary">Subscribe</button>
             </div>
-        </div>
-        <div class="cta-image">
-    
+            <p class="cta-bio">Let’s embody your beautiful ideas together, simplify the way you visualize your next big things.</p>
         </div>
     </div>
 </body>
