--- a/tema/CTA-47/index.html
+++ b/tema/CTA-47/index.html
@@ -15,7 +15,17 @@
 </head>
 
 <body>
-
+  <div class="layout">
+    <div class="cta-img"></div>
+    <div class="content">
+      <h1>Try using our templates!</h1>
+      <div class="input-button cta-form">
+          <input placeholder="Enter your email address" />
+          <button class="btn-primary">Subscribe</button>
+      </div>
+      <p>Let’s embody your beautiful ideas together, simplify the way you visualize your next big things.</p>
+    </div>
+  </div>
 </body>
 
 </html>
